--- a/app/views/spree/shared/_link_to_cart.html.erb
+++ b/app/views/spree/shared/_link_to_cart.html.erb
@@ -1,1 +1,22 @@
-<%= link_to_cart %>
+
+<%== link_to_cart.sub('Empty', '0') %>
+
+
+
+<% if spree_current_user %>
+<li>
+   
+    </li>
+    <li>
+    <%= link_to "Logout", destroy_spree_user_session_path, method: :delete %>
+    </li>
+<% else %>
+  <li>
+    <%= link_to "Login", new_spree_user_session_path %>
+
+  </li>
+  <li>
+    <%= link_to "Register", new_spree_user_registration_path %>
+  </li>
+<% end %>
+
