--- a/app/views/spree/shared/_link_to_cart.html.erb
+++ b/app/views/spree/shared/_link_to_cart.html.erb
@@ -5,9 +5,8 @@
 
 <% if spree_current_user %>
 <li>
-   
-    </li>
-    <li>
+    <%= link_to "Inglis" %>
+
     <%= link_to "Logout", destroy_spree_user_session_path, method: :delete %>
     </li>
 <% else %>
