--- a/app/views/spree/user_registrations/new.html.erb
+++ b/app/views/spree/user_registrations/new.html.erb
@@ -1,26 +1,27 @@
-
-<%= form_for :post do |f| %>
-    <h6> LOGIN AS EXISTING CUSTOMER</h6>
-   
-   
-    <p>
-      <%= f.label :User %><br>
-      <%= f.text_field :title %>
-    </p>
-  
-    <p>
-    <%= f.label :Email %><br>
-    <%= f.text_field :title %>
-    </p>
-
-    <p>
-    <%= f.label :Password %><br>
-    <%= f.password_field :title %>
-    </p>
-  
-    <p>
-      <%= f.submit %>
-    </p>
-
-
-  <% end %>
+<h2>Registrate</h2>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <%= render "devise/shared/error_messages", resource: resource %>
+  <div class="field">
+    <%= f.label :email %><br />
+    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  </div>
+  <div class="field">
+    <%= f.label :username %><br />
+    <%= f.text_field :username %>
+  </div>
+  <div class="field">
+    <%= f.label :password %>
+    <% if @minimum_password_length %>
+    <em>(<%= @minimum_password_length %> characters minimum)</em>
+    <% end %><br />
+    <%= f.password_field :password, autocomplete: "new-password" %>
+  </div>
+  <div class="field">
+    <%= f.label :password_confirmation %><br />
+    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  </div>
+  <div class="actions">
+    <%= f.submit "Sign up" %>
+  </div>
+<% end %>
+<%= render "devise/shared/links" %>
